--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">     
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+</head>
+
+<body>
+    <header class="header">
+        <nav class="header__menu">
+            <a href="./index.html" class="header__link"> главная &#9675;</a>
+            <a href="./lots.html" class="header__link"> посмотреть лоты &#9675;</a>
+            <a href="./auction.html" class="header__link"> об аукционе </a>
+        </nav>
+        <img src="./images/logo.svg" alt="логотип " class="header__logo-image" style="padding-right:70px;">
+        <address class="address">
+            <a href="mailto:mail@example.com">+9 999 555 5555</a> <br>
+            <a href="mailto:mail@example.com">info@sobaka.ge</a>
+            <p>наб. Принсенграхт 263- </p>
+            <p>265, Амстердам</p>
+        </address>
+    </header>
+
+    <main class="back">
+        <div class="container">
+            <p style="text-align: start; "> ОНО </p>
+            <p style="text-align: center; "> ТЕБЕ </p> <br>
+            <p style="text-align: end; "> НАДО </p> <br>
+        </div>
+        <div class="flex_container ">
+            <span>Аукцион вещей, в которые никто не верил</span>   <a href="#" class="my_link"><span class="my_btn">Сделать ставку</span></a> 
+        </div>
+    </main>
+</body>
 </html>
